DISP-1419: fixing failing tests in Windows. "Proxy" and later submodules are still failing.